More info about installing elastiflow